# digital-nitro-fb-ads-insights

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: cloud-functions.yaml
db/: bigquery.py
facebook/: accounts.py  facebook_repo.py  facebook_service.py  test_service.py
facebook/pipeline/: __init__.py  ads_insights.py  age_gender_insights.py  campaign_insights.py  device_insights.py  platform_position_insights.py  region_insights.py  video_insights.py
secret_manager/: doppler.py
tasks/: cloud_tasks.py
